--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="common.css" />
+    <link rel="icon" href="icon.png">
     <script src="script.js"></script>
     <title>TER 개인 포트폴리오</title>
   </head>
