--- a/teamplay.html
+++ b/teamplay.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="common.css" />
     <link rel="stylesheet" href="teamplay.css" />
+    <script src="teamplay.js"></script>
     <title>TER 개인 포트폴리오</title>
   </head>
   <body
@@ -35,27 +36,87 @@
     </header>
     <main>
       <div class="firstmodeul">
-        <div class="sircle clk" id="sircle1">2020 1분기</div>
+        <div class="sircle" id="sircle1">2020 1분기</div>
         <div class="inner-container">
-          <div class="teamline"></div>
+          <div class="teamline" id="tl1">
+            <h1 class="tptitle" id="m11">2020년 1분기에서는,</h1>
+            <h1 id="m12">
+              교과 수업을 하고, 그 안에서 자신도 모르게 진행을 맡는 것을 즐기게
+              되었습니다.
+            </h1>
+            <h1 id="m13">
+              바이러스라는 주제로 교과 수업을 받으며 팀을 이끄는 사람의 중요성을
+              깨달았습니다.
+            </h1>
+            <h1 id="m14">
+              그러나, 가장 많은 시간을 투자하는 문제정의 수업에서 만난 팀에서는
+              큰 비중을 차지하지 못했습니다.
+            </h1>
+          </div>
         </div>
       </div>
       <div class="secondmodeul">
-        <div class="sircle clk" id="sircle2">2020 2분기</div>
+        <div class="sircle" id="sircle2">2020 2분기</div>
         <div class="inner-container">
-          <div class="teamline"></div>
+          <div class="teamline" id="tl2">
+            <h1 class="tptitle" id="m21">2020년 2분기에서는,</h1>
+            <h1 id="m22">
+              이전 보다는 다 같이하는 활동이 적었기에, 교과에서의 협동이 그리
+              많지는 않았습니다.
+            </h1>
+            <h1 id="m23">
+              하지만 문제정의 수업에서는 보다 많은 비중을 차지하였습니다.
+            </h1>
+            <h1 id="m24">
+              장애인 화재대피를 해결하는 것을 주제로 문제정의 팀을 만들었고,
+              좋은 취지는 의욕을 가져와 보다 적극적으로 팀의 리더를 맡게
+              되었습니다.
+            </h1>
+          </div>
         </div>
       </div>
       <div class="thirdmodeul">
-        <div class="sircle clk" id="sircle3">2020 3분기</div>
+        <div class="sircle" id="sircle3">2020 3분기</div>
         <div class="inner-container">
-          <div class="teamline"></div>
+          <div class="teamline" id="tl3">
+            <h1 class="tptitle" id="m31">2020년 3분기에서는,</h1>
+            <h1 id="m32">
+              협동과 개인, 수업에서 이전보다 나은 결과물을 만들 수 있었습니다.
+            </h1>
+            <h1 id="m33">
+              개인은 보다 깊이있는 학습으로 의미있는 결과물을 만들 수 있었고,
+            </h1>
+            <h1 id="m34">
+              수업에서는 팀원과의 협력과 팀을 이끄는 것에 보다 적극적으로
+              참여하여 좋은 성과를 낼 수 있었습니다.
+            </h1>
+            <h1 id="m35">
+              장애인 화재대피라는 주제는 청각장애인으로 범위를 좁혔고, 팀에서의
+              리더라는 입지를 탄탄히하고, 팀원들의 신뢰를 얻었습니다.
+            </h1>
+          </div>
         </div>
       </div>
       <div class="fourmodeul">
-        <div class="sircle clk" id="sircle4">2020 4분기</div>
+        <div class="sircle" id="sircle4">2020 4분기</div>
         <div class="inner-container">
-          <div class="teamline"></div>
+          <div class="teamline" id="tl4">
+            <h1 class="tptitle" id="m41">2020년 4분기에서는,</h1>
+            <h1 id="m42">
+              일반적인 교과수업 대신 코딩을 배우며 역량의 영역을 넓혔습니다.
+            </h1>
+            <h1 id="m43">
+              앞으로는 리더의 역량을 기르는 동시에, 팀의 부족한 부분을 채울 수
+              있도록 노력할 것입니다.
+            </h1>
+            <h1 id="m44">
+              코딩과, 디자인 등의 분야에서 팀원들을 보조하는 동시에 팀을 이끄는
+              리더가 될 것입니다.
+            </h1>
+            <h1 class="tptitle" id="m45">
+              제게 협동이란, 리더의 위치에서 팀을 이끄는 것입니다.
+            </h1>
+          </div>
         </div>
       </div>
     </main>
