--- a/gyeolgwa.html
+++ b/gyeolgwa.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="common.css" />
-    <script src="script.js"></script>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://ter127.github.io/portfolio_of_ter/favicon.ico"
+    />
     <title>TER 개인 포트폴리오</title>
   </head>
   <body
