--- a/teamplay.html
+++ b/teamplay.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="common.css" />
     <link rel="stylesheet" href="teamplay.css" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://ter127.github.io/portfolio_of_ter/favicon.ico"
+    />
     <script src="teamplay.js"></script>
     <title>TER 개인 포트폴리오</title>
   </head>
