--- a/baewum.html
+++ b/baewum.html
@@ -82,6 +82,10 @@
                 <img src="2m12.png" />
               </div>
             </div>
+            <div class="buttonbox">
+              <div class="btn" id="gtnl1"><img src="left.png" alt="" /></div>
+              <div class="btn" id="gtnr1"><img src="right.png" alt="" /></div>
+            </div>
           </div>
           <div class="projecttxt" id="projecttxt1">
             소설의 컨셉아트를 그리기 위해 자료를 모으고, 컨셉아트의 초안을
@@ -136,6 +140,10 @@
                 <img src="3m12.png" />
               </div>
             </div>
+            <div class="buttonbox">
+              <div class="btn" id="gtnl2"><img src="left.png" alt="" /></div>
+              <div class="btn" id="gtnr2"><img src="right.png" alt="" /></div>
+            </div>
           </div>
           <div class="projecttxt" id="projecttxt2">
             보다 좋은 컨셉아트를 그리기 위해 학습하고, 직접 컨셉아트를
@@ -165,6 +173,10 @@
               <div class="inner"><img src="PDF 잡지-9.png" alt="" /></div>
               <div class="inner"><img src="PDF 잡지-10.png" alt="" /></div>
               <div class="inner"><img src="PDF 잡지-11.png" alt="" /></div>
+            </div>
+            <div class="buttonbox">
+              <div class="btn" id="ctnl1"><img src="left.png" alt="" /></div>
+              <div class="btn" id="ctnr1"><img src="right.png" alt="" /></div>
             </div>
           </div>
           <div class="classtxt" id="classtxt1">
