--- a/baewum.html
+++ b/baewum.html
@@ -16,7 +16,7 @@
   </head>
   <body
     onscroll="var nowScroll = document.documentElement.scrollTop;
-        if(nowScroll>600) {
+        if(nowScroll>0) {
             document.querySelector('#head').classList.add('bar-ani')
         }"
   >
@@ -40,173 +40,192 @@
     </header>
     <main>
       <div class="inner-container">
-        <div class="gaintitle">개인 프로젝트</div>
-        <div class="gainsircle" id="gainsircle1">2020년 2분기</div>
-        <div class="line" id="secondline">
-          <div class="slide">
-            <div class="contain" id="secondgain">
-              <div class="inner">
-                <img src="2m1.png" />
+        <div class="mbutton">
+          <div class="mbtnbox"><div class="mbtn kam" id="m1">M1</div></div>
+          <div class="mbtnbox"><div class="mbtn kam" id="m2">M2</div></div>
+          <div class="mbtnbox"><div class="mbtn kam" id="m3">M3</div></div>
+          <div class="mbtnbox"><div class="mbtn kam" id="m4">M4</div></div>
+        </div>
+      </div>
+      <div style="overflow: hidden; width: 1300px; margin: 0 auto">
+        <div class="containBox">
+          <div class="m1box">
+            <div class="inner-container">
+              <div class="gain">
+                <div class="gaintitle">개인 프로젝트-스페인 여행위키</div>
+                <div class="sldbox"><img src="1모듈개인.png" alt="" /></div>
+                <div class="gaincomment">
+                  <div class="comment">
+                    첫번쨰 개인 프로젝트에서는 스페인에 다녀온 경험을 바탕으로
+                    <br />
+                    스페인에 대한 정보를 소개하는 책를 제작하였습니다. <br />
+                    학습한 내용이 거의 없었기 때문에 내용에서 깊이를 찾기가
+                    힘들며, <br />
+                    책 자체도 상당히 지루한 내용이었습니다.
+                  </div>
+                </div>
               </div>
-              <div class="inner">
-                <img src="2m2.png" />
+              <div class="monjung">
+                <div class="monjungtitle">
+                  팀 문제정의 프로젝트-길거리 흡연 문제를 해결
+                </div>
+                <div class="sldbox"><img src="1모듈문정.png" alt="" /></div>
+                <div class="monjungcomment">
+                  <div class="comment">
+                    첫번쨰 팀 프로젝트는 길거리 흡연 문제의 해결입니다. 길거리
+                    <br />
+                    흡인이 많은 이유를 흡연자 입장에서 분석해보았으며, <br />
+                    흡연자들을 위한 흡연부스를 구상하였습니다.
+                  </div>
+                </div>
               </div>
-              <div class="inner">
-                <img src="2m3.png" />
+              <div class="juje">
+                <div class="jujetitle">수업-바이러스에서 살아남는 방법</div>
+                <div class="sldbox"><img src="1모듈주제.png" alt="" /></div>
+                <div class="jujecomment">
+                  <div class="comment">
+                    첫번째로 받은 수업은 바이러스를 주제로 한 <br />
+                    교과수업이었습니다. 바이러스를 통계를 통해 분석하고, <br />
+                    바이러스가 가져오는 사회적 영향을 알아보았으며, 바이러스가
+                    <br />
+                    감염되는 과정을 학습하였습니다.
+                  </div>
+                </div>
               </div>
-              <div class="inner">
-                <img src="2m4.png" />
-              </div>
-              <div class="inner">
-                <img src="2m5.png" />
-              </div>
-              <div class="inner">
-                <img src="2m6.png" />
-              </div>
-              <div class="inner">
-                <img src="2m7.png" />
-              </div>
-              <div class="inner">
-                <img src="2m8.png" />
-              </div>
-              <div class="inner">
-                <img src="2m9.png" />
-              </div>
-              <div class="inner">
-                <img src="2m10.png" />
-              </div>
-              <div class="inner">
-                <img src="2m11.png" />
-              </div>
-              <div class="inner">
-                <img src="2m12.png" />
-              </div>
-            </div>
-            <div class="buttonbox">
-              <div class="btn" id="gtnl1"><img src="left.png" alt="" /></div>
-              <div class="btn" id="gtnr1"><img src="right.png" alt="" /></div>
             </div>
           </div>
-          <div class="projecttxt" id="projecttxt1">
-            소설의 컨셉아트를 그리기 위해 자료를 모으고, 컨셉아트의 초안을
-            제작하였습니다.<br />
-            결과물로 제작한 e-book에는 소재가 된 소설의 내용과 조사한 자료 등이
-            있었으며, 연습한 그림들과 소설 컨셉아트의 초안이 있었습니다. <br />
-            그러나, 제대로된 학습없이 작업하였기에 결과물의 내용이
-            부실하였습니다. <br />
-            가장 중요한 '컨셉아트에 대한 학습'이 하나도 이루어지지 않았고 결과물
-            제작을 게을리한 결과, 원화의 초안은 낙서나 다름없었습니다.
+          <div class="m2box">
+            <div class="inner-container">
+              <div class="gain">
+                <div class="gaintitle">개인 프로젝트-소설 컨셉아트 제작기</div>
+                <div class="sldbox"><img src="2모듈개인.png" alt="" /></div>
+                <div class="gaincomment">
+                  <div class="comment">
+                    두번째 개인 프로젝트는 게임의 컨셉아트를 제작하는 것입니다.
+                    <br />
+                    게임 컨셉아트의 소재로 소설을 선택하였고, <br />
+                    신화나 역사 속 건축양식을 통해 초안을 그렸습니다. <br />
+                    소재를 구하는 것에 꽂혀 컨셉 아트 자체에 대한 내용이
+                    부실했습니다.
+                  </div>
+                </div>
+              </div>
+              <div class="monjung">
+                <div class="monjungtitle">
+                  팀 문제정의 프로젝트-장애인 화재대피 문제를 해결
+                </div>
+                <div class="sldbox"><img src="2모듈문정.png" alt="" /></div>
+                <div class="monjungcomment">
+                  <div class="comment">
+                    두번쨰 팀 프로젝트는 장애인 화재대피입니다. <br />
+                    높은 장애인 화재 사망률 문제를 해결하기 위해 관련 학습을
+                    진행하였습니다. <br />
+                    해결 대상인 장애인의 범위가 자주 바뀌었습니다. <br />
+                    신체장애인,지체장애인,시각장애인 등을 거쳤습니다.
+                  </div>
+                </div>
+              </div>
+              <div class="juje">
+                <div class="jujetitle">
+                  수업-나는 미래에서 정당한 대우를 받을 수 있을까?
+                </div>
+                <div class="sldbox"><img src="2모듈주제.png" alt="" /></div>
+                <div class="jujecomment">
+                  <div class="comment">
+                    두번째 수업은 노동을 주제로 하였습니다. <br />
+                    정규직과 비정규직에 대해 학습하고, <br />
+                    노동과 관련된 문학작품을 읽고 분석하였으며 <br />
+                    노동에서 나타나는 차별을 생물학 분야를 통해 학습하였습니다.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="m3box">
+            <div class="inner-container">
+              <div class="gain">
+                <div class="gaintitle">
+                  개인 프로젝트-컨셉 아티스트가 되기 위해
+                </div>
+                <div class="sldbox"><img src="3모듈개인.png" alt="" /></div>
+                <div class="gaincomment">
+                  <div class="comment">
+                    세번쨰 개인 프로젝트는 두번째에 이어가는 컨셉아트입니다.
+                    <br />
+                    앞 프로젝트의 부족한 부분을 메꾸기 위해 <br />
+                    게임 컨셉아트가 제작되는 과정 전체를 학습하였으며, <br />
+                    좋은 컨셉아트를 그리는 방법에 대한 결론을 낼 수 있었습니다.
+                  </div>
+                </div>
+              </div>
+              <div class="monjung">
+                <div class="monjungtitle">
+                  팀 문제정의 프로젝트-청각장애인 화재대피
+                </div>
+                <div class="sldbox"><img src="3모듈문정.png" alt="" /></div>
+                <div class="monjungcomment">
+                  <div class="comment">
+                    세번째 팀 프로젝트는 두번째에서 이어갑니다. <br />
+                    애매하게 끝난 해결할 대상을 청각장애인으로 과감하게 좁히고
+                    <br />
+                    청각장애인 화재대피에서 가장 중요한 시각경보기에 대해
+                    학습하고 <br />
+                    메뉴얼,법률의 학습으로 청각장애인 화재대피에서 발생하는
+                    문제들에 대한 <br />
+                    가설을 세웠습니다.
+                  </div>
+                </div>
+              </div>
+              <div class="juje">
+                <div class="jujetitle">수업-열대화 사회에서 살아남는 방법</div>
+                <div class="sldbox"><img src="3모듈주제.png" alt="" /></div>
+                <div class="jujecomment">
+                  <div class="comment">
+                    세번째 수업은 기후변화로 교과를 학습하였습니다. <br />
+                    팀은 기후변화 중에서도 열대화라는 주제를 삼았고 <br />
+                    열대화에서 발생하는 현상들을 토대로 어떻게 해결하는지를
+                    고민하였습니다. <br />
+                    국산 열대과일을 이용한 화채를 만드는 등 <br />
+                    열대화에 대한 적응과 해결하기 위한 노력을 했으며 <br />
+                    열대화의 원인,영향,해결,미래에 대한 내용을 담은 <br />
+                    잡지를 제작하였습니다.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="m4box">
+            <div class="inner-container">
+              <div class="monjung">
+                <div class="monjungtitle">
+                  팀 문제정의 프로젝트-시각경보기의 정보 부족
+                </div>
+                <div class="sldbox"><img src="4모듈문정.png" alt="" /></div>
+                <div class="monjungcomment">
+                  <div class="comment">
+                    네번째 팀 프로젝트는 세번째에서 이어갑니다. <br />
+                    이전 프로젝트에서 세운 가설들을 증명하여 최종 원인을
+                    꼽았습니다. <br />
+                    청각장애인 화재대피 문제에 대한 핵심원인은 <br />
+                    청각장애인들이 시각경보기에 대한 정보를 접하지 못한다는 것
+                    이었습니다.
+                  </div>
+                </div>
+              </div>
+              <div class="juje">
+                <div class="jujetitle">수업-웹페이지 제작을 위한 코딩 수업</div>
+                <div class="sldbox"><img src="4모듈주제.png" alt="" /></div>
+                <div class="jujecomment">
+                  <div class="comment"></div>
+                  네번째 수업은 프로그래밍입니다. <br />
+                  앞서 배운 교과 수업과는 다르게 네번째는 <br />
+                  웹 페이지 제작을 중심으로 한 코딩 수업입니다. <br />
+                  html,css,js를 학습하고 개인과 팀 웹을 제작하였습니다.
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-
-        <div class="gainsircle" id="gainsircle2">2020년 3분기</div>
-        <div class="line" id="thirdline">
-          <div class="slide">
-            <div class="contain" id="thirdgain">
-              <div class="inner">
-                <img src="3m1.png" />
-              </div>
-              <div class="inner">
-                <img src="3m2.png" />
-              </div>
-              <div class="inner">
-                <img src="3m3.png" />
-              </div>
-              <div class="inner">
-                <img src="3m4.png" />
-              </div>
-              <div class="inner">
-                <img src="3m5.png" />
-              </div>
-              <div class="inner">
-                <img src="3m6.png" />
-              </div>
-              <div class="inner">
-                <img src="3m7.png" />
-              </div>
-              <div class="inner">
-                <img src="3m8.png" />
-              </div>
-              <div class="inner">
-                <img src="3m9.png" />
-              </div>
-              <div class="inner">
-                <img src="3m10.png" />
-              </div>
-              <div class="inner">
-                <img src="3m11.png" />
-              </div>
-              <div class="inner">
-                <img src="3m12.png" />
-              </div>
-            </div>
-            <div class="buttonbox">
-              <div class="btn" id="gtnl2"><img src="left.png" alt="" /></div>
-              <div class="btn" id="gtnr2"><img src="right.png" alt="" /></div>
-            </div>
-          </div>
-          <div class="projecttxt" id="projecttxt2">
-            보다 좋은 컨셉아트를 그리기 위해 학습하고, 직접 컨셉아트를
-            그렸습니다. <br />
-            논문과 같은 전문적인 자료를 통해 내용의 깊이가 더해졌고, 결과물의
-            완성도를 높였습니다. <br />
-            그림 실력의 부족으로 컨셉아트 자체의 수준은 높지 않았지만 <br />
-            결과물을 만들기 위해 탄탄하게 학습하는 방법을 배웠습니다.
-          </div>
-        </div>
-        <div class="gainsircle">2020년 4분기</div>
-        <!-- c랩 -->
-        <div class="gaintitle">수업</div>
-        <div class="gainsircle" id="classsirclefirst">2020년 3분기</div>
-        <div class="line" id="fourthline">
-          <div class="jabji">
-            <div class="contain" id="firstclass">
-              <div class="inner"><img src="PDF 잡지.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-1.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-2.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-3.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-4.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-5.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-6.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-7.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-8.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-9.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-10.png" alt="" /></div>
-              <div class="inner"><img src="PDF 잡지-11.png" alt="" /></div>
-            </div>
-            <div class="buttonbox">
-              <div class="btn" id="ctnl1"><img src="left.png" alt="" /></div>
-              <div class="btn" id="ctnr1"><img src="right.png" alt="" /></div>
-            </div>
-          </div>
-          <div class="classtxt" id="classtxt1">
-            열대화라는 사회 현상을 해결하기 위해 <br />
-            기초상식들을 배우고, 추가로 필요한 자료들을 모아 잡지를
-            제작하였습니다. <br />
-            팀원과의 논의 끝에 미성년자인 팀원들이 열대화를 해결하기 위해 어떤
-            것을 할 수 있을지 알아냈습니다. <br />
-            위 활동을 통해, 체계적인 계획을 세워 학습하고 성과를 만드는 방법에
-            대해 배웠습니다.
-          </div>
-        </div>
-
-        <div class="gainsircle" id="classsirclesecond">2020년 4분기</div>
-        <div class="line" id="fivthline">
-          <div class="slide">
-            <div class="contain" id="secondclass">
-              <img src="팀 웹.png" alt="" width="600px" />
-            </div>
-          </div>
-          <div class="classtxt" id="classtxt2">
-            html,css,js를 학습하고 팀 프로젝트를 소개하는 웹페이지를
-            제작하였습니다. <br />
-            페이지 제작을 위해 기획한 기능들을 기간안에 모두 구현하기 위해
-            계획을 세우고 제작을 진행했습니다. <br />
-            탄탄하게 기획하고 실행하는 것으로 완성도 높은 결과물을
-            제작하였습니다.
-          </div>
-        </div>
-        <div class="gainsircle" id="fnjd">2021년</div>
       </div>
     </main>
     <footer>
