--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div style="overflow: hidden">
       <header id="head" style="animation-fill-mode: forwards">
         <div class="inner-container" style="position: relative">
+          <div class="headtxt">나는&nbsp'<p id="headid" style="display: inline;">&nbsp&nbsp&nbsp&nbsp&nbsp</p>'&nbsp테르입니다</div>
           <div class="menubar">
             <div class="headermenu"  id='hmh' onmouseover="document.querySelector('#hmh').style.color = 'grey'" onmouseout="document.querySelector('#hmh').style.color = 'white'" onclick="window.scrollTo(0,0)">홈으로</div>
             <div class="headermenu">
