--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="baum2" id="baum2">
               <div class="im" style="margin-left: 300px">
-                <img src="판사이 호수.png" />
+                 <img src="3모듈개인.png">
               </div>
               <div class="baewumtext" id="baumtxt2">
                 '디자인과 그림에 관심이 있는'
